tests/fixtures/invalid/pow_int_str.py
# Cannot call pow() with Int, Str
x = pow(1, "hello")
